@@ -729,78 +729,80 @@ public class MapView extends View {
 
 
                 } else if (featureMap.getValue_type().equals("number")) {
-                    float formatedValue = 0;
-                    if (value != null && !value.equals("")) {
-                        formatedValue = Round(Float.parseFloat(value), 2);
-                        Tracer.v(mytag, " Round the value" + value + " to " + formatedValue);
+                    if (!parameters.contains("command")) {
+                        float formatedValue = 0;
+                        if (value != null && !value.equals("")) {
+                            formatedValue = Round(Float.parseFloat(value), 2);
+                            Tracer.v(mytag, " Round the value" + value + " to " + formatedValue);
 
-                        try {
-                            //Basilic add, number feature has a unit parameter
-                            jparam = new JSONObject(parameters.replaceAll("&quot;", "\""));
-                            String test_unite = jparam.getString("unit");
-                            //# 30 convert byte unit.
-                            switch (test_unite) {
-                                case "b":
-                                    value = android.text.format.Formatter.formatFileSize(context, Long.parseLong(value));
-                                    break;
-                                case "ko":
-                                    value = android.text.format.Formatter.formatFileSize(context, Long.parseLong(value) * 1024);
-                                    break;
-                                default:
-                                    value = formatedValue + " " + test_unite;
-                                    break;
-                            }
-                        } catch (JSONException e) {
-                            //Basilic : no sure that the key state was the better way to find unit
-                            if (featureMap.getState_key().equalsIgnoreCase("temperature"))
-                                value = featureMap.getCurrentState() + " °C";
-                            else if (featureMap.getState_key().equalsIgnoreCase("pressure"))
-                                value = featureMap.getCurrentState() + " hPa";
-                            else if (featureMap.getState_key().equalsIgnoreCase("humidity"))
-                                value = featureMap.getCurrentState() + " %";
-                            else if (featureMap.getState_key().equalsIgnoreCase("percent"))
-                                value = featureMap.getCurrentState() + " %";
-                            else if (featureMap.getState_key().equalsIgnoreCase("visibility"))
-                                value = featureMap.getCurrentState() + " km";
-                            else if (featureMap.getState_key().equalsIgnoreCase("chill"))
-                                value = featureMap.getCurrentState() + " °C";
-                            else if (featureMap.getState_key().equalsIgnoreCase("speed"))
-                                value = featureMap.getCurrentState() + " km/h";
-                            else if (featureMap.getState_key().equalsIgnoreCase("drewpoint"))
-                                value = featureMap.getCurrentState() + " °C";
-                            else if (featureMap.getState_key().equalsIgnoreCase("condition-code") || featureMap.getState_key().toLowerCase().contains("condition_code") || featureMap.getState_key().toLowerCase().contains("current_code")) {
-                                //Add try catch to avoid other case that make #1794
-                                try {
-                                    //todo use xml and weather fonts here
-                                    //typeface apply to canvas paint_text
-                                    Typeface typeface = Typeface.createFromAsset(context.getAssets(), "fonts/weathericons-regular-webfont.ttf");
-                                    paint_text.setTypeface(typeface);
-                                    value = context.getString(Graphics_Manager.Names_conditioncodes(getContext(), Integer.parseInt(featureMap.getCurrentState())));
-                                } catch (Exception e1) {
-                                    e1.printStackTrace();
+                            try {
+                                //Basilic add, number feature has a unit parameter
+                                jparam = new JSONObject(parameters.replaceAll("&quot;", "\""));
+                                String test_unite = jparam.getString("unit");
+                                //# 30 convert byte unit.
+                                switch (test_unite) {
+                                    case "b":
+                                        value = android.text.format.Formatter.formatFileSize(context, Long.parseLong(value));
+                                        break;
+                                    case "ko":
+                                        value = android.text.format.Formatter.formatFileSize(context, Long.parseLong(value) * 1024);
+                                        break;
+                                    default:
+                                        value = formatedValue + " " + test_unite;
+                                        break;
+                                }
+                            } catch (JSONException e) {
+                                //Basilic : no sure that the key state was the better way to find unit
+                                if (featureMap.getState_key().equalsIgnoreCase("temperature"))
+                                    value = featureMap.getCurrentState() + " °C";
+                                else if (featureMap.getState_key().equalsIgnoreCase("pressure"))
+                                    value = featureMap.getCurrentState() + " hPa";
+                                else if (featureMap.getState_key().equalsIgnoreCase("humidity"))
+                                    value = featureMap.getCurrentState() + " %";
+                                else if (featureMap.getState_key().equalsIgnoreCase("percent"))
+                                    value = featureMap.getCurrentState() + " %";
+                                else if (featureMap.getState_key().equalsIgnoreCase("visibility"))
+                                    value = featureMap.getCurrentState() + " km";
+                                else if (featureMap.getState_key().equalsIgnoreCase("chill"))
+                                    value = featureMap.getCurrentState() + " °C";
+                                else if (featureMap.getState_key().equalsIgnoreCase("speed"))
+                                    value = featureMap.getCurrentState() + " km/h";
+                                else if (featureMap.getState_key().equalsIgnoreCase("drewpoint"))
+                                    value = featureMap.getCurrentState() + " °C";
+                                else if (featureMap.getState_key().equalsIgnoreCase("condition-code") || featureMap.getState_key().toLowerCase().contains("condition_code") || featureMap.getState_key().toLowerCase().contains("current_code")) {
+                                    //Add try catch to avoid other case that make #1794
+                                    try {
+                                        //todo use xml and weather fonts here
+                                        //typeface apply to canvas paint_text
+                                        Typeface typeface = Typeface.createFromAsset(context.getAssets(), "fonts/weathericons-regular-webfont.ttf");
+                                        paint_text.setTypeface(typeface);
+                                        value = context.getString(Graphics_Manager.Names_conditioncodes(getContext(), Integer.parseInt(featureMap.getCurrentState())));
+                                    } catch (Exception e1) {
+                                        e1.printStackTrace();
+                                    }
                                 }
                             }
-                        }
-                        if (value == null)
-                            value = "";
+                            if (value == null)
+                                value = "";
 
-                        for (int j = 1; j < 5; j++)
-                            paint_text.setShadowLayer(2 * j, 0, 0, Color.BLACK);
-                        paint_text.setTextSize(texsize * scale + 0.5f + 4);
-                        if (featureMap != null) {
-                            Tracer.e(mytag, "Drawing value for " + label + "Value = " + value + " X = " + featureMap.getPosx() + " Y = " + featureMap.getPosy());
-                            canvasWidget.drawText(value,
-                                    (featureMap.getPosx() * currentScale) + text_Offset_X,
-                                    (featureMap.getPosy() * currentScale) + text_Offset_Y - (10 * (int) scale),
-                                    paint_text);
-                            paint_text.setTextSize(texsize * scale + 0.5f - 1);
-                            paint_text.setTypeface(Typeface.DEFAULT);
-                            Tracer.e(mytag, "Drawing label " + label + " X = " + featureMap.getPosx() + " Y = " + featureMap.getPosy());
-                            if (!params.getBoolean("HIDE", false))
-                                canvasWidget.drawText(label,
+                            for (int j = 1; j < 5; j++)
+                                paint_text.setShadowLayer(2 * j, 0, 0, Color.BLACK);
+                            paint_text.setTextSize(texsize * scale + 0.5f + 4);
+                            if (featureMap != null) {
+                                Tracer.e(mytag, "Drawing value for " + label + "Value = " + value + " X = " + featureMap.getPosx() + " Y = " + featureMap.getPosy());
+                                canvasWidget.drawText(value,
                                         (featureMap.getPosx() * currentScale) + text_Offset_X,
-                                        (featureMap.getPosy() * currentScale) + text_Offset_Y + (6 * (int) scale),
+                                        (featureMap.getPosy() * currentScale) + text_Offset_Y - (10 * (int) scale),
                                         paint_text);
+                                paint_text.setTextSize(texsize * scale + 0.5f - 1);
+                                paint_text.setTypeface(Typeface.DEFAULT);
+                                Tracer.e(mytag, "Drawing label " + label + " X = " + featureMap.getPosx() + " Y = " + featureMap.getPosy());
+                                if (!params.getBoolean("HIDE", false))
+                                    canvasWidget.drawText(label,
+                                            (featureMap.getPosx() * currentScale) + text_Offset_X,
+                                            (featureMap.getPosy() * currentScale) + text_Offset_Y + (6 * (int) scale),
+                                            paint_text);
+                            }
                         }
                     }
                 } else if (featureMap.getValue_type().equals("range") || ((parameters.contains("command")) && (featureMap.getDevice_feature_model_id().startsWith("DT_Scaling")))) {
@@ -1029,7 +1031,7 @@ public class MapView extends View {
             }
         } else if (feature.getValue_type().equals("number")) {
             Tracer.i(mytag, "Parameters for number:" + feature.getParameters());
-            if (feature.getParameters().contains("command_type")) {
+            if (feature.getParameters().contains("command")) {
                 info_commands = new Graphical_Info_commands(Tracer, context, URL,
                         widgetSize, 0, Id, zone, params, feature, handler);
                 Graphical_Info_commands.container = (FrameLayout) panel_widget;
